# cg-trainer-grpc

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  main.py  setup.py
app/mapper/: Mapper.py
app/models/: __init__.py  acronyms.py  acronyms_traindata.py  base_model.py  models.py  trainset.py  trainset_contents.py
app/repository/: acronym_repository.py  acronym_traindata_repository.py  base_respoitory.py  connection_manager.py  model_repository.py  repository.py  trainset_content_repository.py  trainset_repository.py
app/services/: acronyms_service.py  acronyms_traindata_service.py  base_service.py  model_service.py  trainset_contetns_service.py  trainset_service.py
app/services/proto/: acronyms.proto  acronyms_pb2.py  acronyms_pb2_grpc.py
app/sql_alchemy/: connection.py
oracle-db/: create_user.sql  readme.md
